--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=ExoWild
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Level/MainMenu.MainMenu
+GameDefaultMap=/Game/Level/MainMenu.MainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Script/Engine.GameMode
+GlobalDefaultGameMode=/Game/Blueprint/Core/Mode/BP_MainMenu.BP_MainMenu_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
