--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,6 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/Blueprint/Core/Mode/BP_MainMenu.BP_MainMenu_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/Blueprint/Core/BP_ExowildGameInstance.BP_ExowildGameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
