--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,3 +5,6 @@ CompanyName=Strassz
 CompanyDistinguishedName=Strassz
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "A822CB0D4A2CD557EC7E45BE95094122", "ExoWild")
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
